--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed:questions": "node -r dotenv/config scripts/seed-questions.js"
   },
   "dependencies": {
     "@ai-sdk/google": "^1.1.25",
@@ -21,6 +22,8 @@
     "dayjs": "^1.11.13",
     "firebase": "^11.4.0",
     "firebase-admin": "^13.2.0",
+    "dotenv": "^16.4.5",
+    "mongoose": "^8.8.0",
     "lucide-react": "^0.482.0",
     "next": "^15.5.0",
     "next-themes": "^0.4.6",
