--- a/package.json
+++ b/package.json
@@ -12,24 +12,30 @@
   "dependencies": {
     "@ai-sdk/google": "^1.1.25",
     "@daily-co/daily-js": "^0.77.0",
+    "@google/genai": "^1.28.0",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.9.1",
     "@vapi-ai/web": "^2.5.0",
     "ai": "^4.1.61",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "dotenv": "^16.4.5",
     "firebase": "^11.4.0",
     "firebase-admin": "^13.2.0",
-    "dotenv": "^16.4.5",
-    "mongoose": "^8.8.0",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.482.0",
+    "mongoose": "^8.8.0",
     "next": "^15.5.0",
     "next-themes": "^0.4.6",
+    "pdfjs-dist": "^5.4.296",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "recharts": "^3.3.0",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
