--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@daily-co/daily-js": "^0.77.0",
     "@google/genai": "^1.28.0",
     "@hookform/resolvers": "^4.1.3",
+    "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@tsparticles/react": "^3.0.0",
@@ -28,6 +29,7 @@
     "firebase-admin": "^13.2.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.482.0",
+    "monaco-editor": "^0.54.0",
     "mongoose": "^8.8.0",
     "next": "^15.5.0",
     "next-themes": "^0.4.6",
